# Neworld

./: .gitignore  Neworld PRD.md  To Fix.txt
loresmith/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
loresmith/src/: App.tsx  index.css
loresmith/src-tauri/: Cargo.toml  tauri.conf.json  tauri.full.conf.json
loresmith/src-tauri/capabilities/: default.json
loresmith/src-tauri/icons/: icon.icns
loresmith/src-tauri/nsis/: hooks.full.nsh  hooks.nsh
loresmith/src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
loresmith/src-tauri/src/commands/: ai.rs  chapter.rs  conflicts.rs  entity.rs  export.rs  mod.rs  project.rs
loresmith/src-tauri/src/conflict_detection/: mod.rs
loresmith/src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
loresmith/src-tauri/src/db/migrations/: 001_initial.sql
loresmith/src-tauri/src/entity_detection/: mod.rs
loresmith/src-tauri/src/ollama/: mod.rs
loresmith/src-tauri/src/rag/: mod.rs
loresmith/src/components/ai/: AiPanel.tsx  ImportAnalyzeModal.tsx
loresmith/src/components/common/: Icon.tsx  SetupScreen.tsx  ToastContainer.tsx  TutorialModal.tsx
loresmith/src/components/conflicts/: ConflictsPanel.tsx
loresmith/src/components/corkboard/: CorkboardView.tsx
loresmith/src/components/editor/: ChaptersView.tsx  MentionList.tsx  ProseEditor.tsx  VersionHistoryPanel.tsx
loresmith/src/components/layout/: HomeScreen.tsx  (+2 more)
loresmith/src/lib/: ipc.ts  utils.ts
loresmith/src/store/: projectStore.ts  uiStore.ts
loresmith/src/themes/: fantasy.json  neutral.json
loresmith/src/types/: index.ts
(+7 files in other folders)
